<resources>
    <string name="app_name">AddressExam</string>
    <string name="addBTN">추가</string>
    <string name="viweBTN">보기</string>
    <string name="delBTN">삭제</string>
    <string name="editname">이름</string>
    <string name="phone">전화번호</string>
    <string name="email">E-mail</string>
    <string name="address">연락처</string>
    <string name="user">USER</string>
    <string name="modify">수정</string>
    <string name="id">ID</string>
    <string name="thema">THEMA</string>
    <string name="white">WHITE</string>
    <string name="dark">DARK</string>
    <string name="blue">BLUE</string>
    <string name="select">SELECT</string>
    <string name="autosave">AUTO SAVE</string>
    <string name="auto_connet">AUTO CONNECT WIFI</string>
    <string name="save">SAVE</string>
    <string name="img">img</string>
</resources>