<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <TextView
        android:id="@+id/usertxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/idETXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:labelFor="@id/idtxt" />

        <Button
            android:id="@+id/modifyBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/modify" />
    </LinearLayout>

    <TextView
        android:id="@+id/thematxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thema"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/themaR"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/whiteRBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/white"
            android:enabled="false"
            />

        <RadioButton
            android:id="@+id/darkRBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark"
            android:enabled="false"
            />

        <RadioButton
            android:id="@+id/blueRBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blue"
            android:enabled="false"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/selecttxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/autosave_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autosave"
        android:enabled="false"
        />

    <CheckBox
        android:id="@+id/auto_connet_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_connet"
        android:enabled="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@android:string/cancel" />
    </LinearLayout>

</LinearLayout>